# gothic

./: .editorconfig  .gitignore  1701231029tree.tar.xz  Doxyfile  LICENSE.txt  Makefile  README  README.md  README.txt  TAGS
cfg/abel/: deVaucouleurs.cfg  deVaucouleurs.param
cfg/anisotropy/: a1b1g25.cfg  a1b1g25.param  a1b1g26.cfg  a1b1g27.cfg  a1b1g28.param  a1b1g29.cfg  a1b1g29.param  a1b1g30.cfg  a1b1g30.param  a1b1g31.param  a1b1g32.param  a1b1g33.cfg  a1b1g34.param  a1b1g35.cfg  hb_beta.cfg  hernquist_beta.cfg  hernquist_beta.param  hernquist_beta_bh.cfg  king_beta.param  nfw_beta.cfg  nfw_beta.param
cfg/debug/: galaxy.cfg  galaxy_dmhalo.param
cfg/dwarf/: EriII.cfg  EriII_bulge.param  EriII_cusp.param
cfg/editor/: smbh_matrix.param  smbh_rodrigues.param  sys0.param  sys0_matrix.param  sys0_rodrigues.param  template.cfg
cfg/fornax/: gc0.cfg  gc0.param  gc1.cfg  gc1.param  gc2.param  gc3.cfg  gc3.param  gc4.cfg  gc5.cfg  gc5.param  halocore1.cfg  halocore1.param  halocore1_run.cfg  halocore1_run.param  halocore2.cfg  halocore2.param  halocore2_run.cfg  halocore2_run.param  halocore3.cfg  halocore3.param  halocore3_run.param  halocusp.cfg  halocusp.param  halocusp_run.cfg  halocusp_run.param  stellar.param
cfg/galaxy/: cb17.cfg  cb17_bulge.param  cb17_burkert.param  cb17_core.cfg  cb17_halo.param  cb17_thickdisk.param  cb17_thindisk.param  compare.cfg  etg.cfg  etg_bulge.param  etg_centralbh.param  etg_dmhalo.param  f07.cfg  f07_disk.param  f07_gics.cfg  f07_halo.param  galaxy.cfg  galaxy_bulge.param  galaxy_centralbh.param  galaxy_stellarhalo.param  galaxy_thickdisk.param  galaxy_thindisk.param  ltg.cfg  ltg_bulge.param  ltg_thickdisk.param  ltg_thindisk.param  m31.cfg  m31_bulge.param  m31_disk.param  mw_bulge.param  mw_centralbh.param  mw_dmhalo.param  mw_thickdisk.param  mw_thindisk.param  s15_disk.param  s15_shalo.param  satellite_bulge.param  satellite_disk.param  satellite_halo.param  spherical.cfg  (+10 more)
cfg/gas/: etg.cfg  etg_gas.cfg  etg_gas.param
cfg/gss/: bulgetbl.param  halotbl.param  k17.cfg  k17_bulge.param  k17_cbh.param  k17_disk.param  k17_halo.param  m16.cfg  obs.cfg  obs.param  obs_run.cfg  sat.param  sat.param.old  satellite.cfg
cfg/losscone/: m07iso.cfg  m07iso.param  m08bh.param  m08bulge.param  m08iso.cfg  m08iso.param  m09bh.param  m09bulge.param  m09iso.cfg  m09iso.param  m09ra1.cfg  m09ra1.param  m09ra1_4.cfg  m09ra1_4.param  m09ra1_8.param  m09ra2.cfg  m09ra2.param  m10bh.param  m10bulge.param  m10ra1.cfg  m10ra1.param  m10ra1_8.cfg  m10ra2.cfg  m11bh.param  m11iso.param  m11ra1_2.param  m11ra1_4.cfg  m11ra1_4.param  m11ra1_8.cfg  m11ra1_8.param  m11ra2.cfg  m12bulge.param  m12iso.cfg  m12ra1.cfg  m12ra1.param  m12ra1_2.param  m12ra1_4.param  m12ra1_8.param  m12ra2.param  m12ra3.cfg  (+37 more)
cfg/multi/: centralbh.param  disk.param  ekes_exponential.param  ekes_king.param  ekes_sersic.param  halo.param  hbd.cfg  hbd_disk.param  hbd_halo.param  hbdd.cfg  hbdd_thick.param  hbdd_thin.param  hd.cfg
cfg/nws/: continue.cfg  k18.cfg  king.param  sat.param  satellite.cfg  subhalo0-backward.cfg  subhalo0.param  subhalo00-backward.cfg  subhalo00-backward.param  subhalo00.param  subhalo01-backward.cfg  subhalo01-backward.param  subhalo02-backward.cfg  subhalo02-backward.param  subhalo03-backward.cfg  subhalo03-backward.param  subhalo03.param  subhalo04-backward.cfg  subhalo04-backward.param  subhalo04.param  subhalo05-backward.cfg  subhalo05-backward.param  subhalo05.param  subhalo06-backward.cfg  subhalo06-backward.param  subhalo07-backward.cfg  subhalo07.param  subhalo1-backward.cfg  subhalo1.param  subhalo10-backward.cfg  subhalo10-backward.param  subhalo10.param  (+33 more)
cfg/nws-find/: cmaes.ini  cmaes_ini.template
doc/: m31.info.txt  m31.summary.txt  nws-continue.info.txt  nws.info.txt  nws.summary.txt  sat.info.txt  unit.txt
host/: andromeda  augustus  dm  mw  zeus
plt/: acc.gp  arm.eps  breakdown.gp  compare.gp  df.gp  err.gp  ijp.gp  near.eps  neighbor.eps  neighbor.gp  relax.gp  time.gp
plugins/: .gitignore  README
pub/: 1402061453tree.tar.xz  1406101126tree.tar.xz  1406111810tree.tar.xz  1406121228tree.tar.xz  1406121725tree.tar.xz  1406231731tree.tar.xz  1406231759tree.tar.xz  1406241012tree.tar.xz  1406251758tree.tar.xz  1406261238tree.tar.xz  1406271446tree.tar.xz  1406301747tree.tar.xz  1407021148tree.tar.xz  1407031253tree.tar.xz  1407071644tree.tar.xz  1407071727tree.tar.xz  1407101742tree.tar.xz  1407111006tree.tar.xz  1407121811tree.tar.xz  1407141619tree.tar.xz  1407141721tree.tar.xz  1407151756tree.tar.xz  1407171803tree.tar.xz  1408041557tree.tar.xz  1408051052tree.tar.xz  1408051053tree.tar.xz  1408071128tree.tar.xz  1408221330tree.tar.xz  1409091610tree.tar.xz  1409101722tree.tar.xz  1409121159tree.tar.xz  1409121755tree.tar.xz  1409131653tree.tar.xz  1409261132tree.tar.xz  1409282149tree.tar.xz  1409290551tree.tar.xz  1410011102tree.tar.xz  1410021502tree.tar.xz  1410121738tree.tar.xz  1410151821tree.tar.xz  (+285 more)
py/: accretion.py  action.py  adep.py  analyze.py  barmode.py  compare.py  compare_vdisp.py  coord.py  df.py  disk.py  draw.py  ejplane.py  fdep.py  fornax.py  gss_obs.py  gssevol.py  h5dot.py  h5map.py  k17disk.py  losscone.py  m31.py  m31phase.py  median.py  monitor.py  ndep.py  needle.py  nws_ini.py  orbit.py  parallel.py  plot.py  poster.py  predpm.py  profile.py  radec.py  retrograding.py  sample.py  showgap.py  showgpu.py  showgss.py  shownws.py  (+12 more)
sh/: NWScheck.sh  NWSsplit.sh  digit.sh  gnuplot.sh  mplwrapper.sh  nvprof.sh  split.sh  summary.sh  wrapper.sh
src/: PHskip.ods
src/init/: 160918potdens.c  CMakeLists.txt  abel.c  abel.h  blas.c  blas.h  disk.c  disk.h  diskDF.c  diskDF.h  eddington.c  eddington.h  editor.c  ergodicDF.c  ergodicDF.h  extend.c  external.c  external.h  gas.h  king.c  king.h  magi.c  magi.h  merge.c  potdens.c  potdens.h  profile.c  profile.h  read.c  sample.c  spline.c  spline.h  table.c  table.h  test.c  test.err  uniformsphere.c
xcr/: LICENSE.txt  README.md  hunt_misc.xcr  hunt_walk.xcr  memo.txt  survey_adep.xcr  survey_l2.xcr  survey_ndep.xcr  survey_walk.xcr  xcrypt_sample_kawai.xcr
(+2339 files in other folders)
